--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,75 +2,64 @@
     max-width: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
-    margin-bottom: 0px;
+    
+    
 }
 
-.logos{
-
-}
-
-@media (min-width:2000px) {
-    .ajo {
-        position: relative;
-        right: 35%;
-        bottom: 15%;
-        width: 75%;
-        height: auto;
-    }
-
-    .trigo {
-        position: relative;
-        bottom: 75%;
-        width: 80%;
-        height: auto;
-    }
-
-    .logo {
-        width: 100%;
-        height: auto;
-        margin-top: 0%;
-        padding-left: 12%;
-        padding-right: 12%;
-    }
-
-    .tomato {
-        margin-top: 1%;
-        width: 20vw;
-        height: auto;
-    }
-
-    .wifi {
-        position: relative;
-        top: 5%;
-        width: 85%;
-        height: auto;
-        left: 27%;
-    }
-
-    .penguin {
-        position: relative;
-        bottom: 20%;
-        right: 10%;
-        width: 80%;
-        height: auto;
-    }
-
-    .logoContainer {
-        color: rgba(255, 255, 255, 0.75);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: Oswald;
-        font-size: 2dvw;
-        font-style: normal;
-        font-weight: 150;
-        line-height: 4dvw;
-        color: white;
-        text-align: center;
+@media (min-width: 1160px){
+    .headerContainer{
+        margin-bottom: -500px;
     }
 }
 
-@media (max-width: 2000px) {
+.buttonInicio {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    border-radius: 80px;
+    color: #FFF;
+    font-family: "Oswald", sans-serif;
+    font-weight: 350;
+    line-height: normal;
+    width: 50vh;
+    background: #E35843;
+    height: 10vh;
+    border: 5px solid #FFF;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 3.5vh;
+    transition: .3s;
+    z-index: 1;
+    font-family: inherit;
+    color: #FFF;
+}
+
+.buttonInicio::before {
+    content: '';
+    width: 0;
+    height: 1200px;
+    position: absolute;
+    top: 30%;
+    right: 50%;
+    transform: translate(50%, -50%) rotate(45deg);
+    background: #992a11;
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+}
+
+.buttonInicio:hover::before {
+    width: 100%;
+}
+
+.buttonInicio:hover {
+    color: #FFF;
+}
+
+
+@media (min-width: 2500px) {
     .logoContainer {
         color: rgba(255, 255, 255, 0.75);
         display: flex;
@@ -88,7 +77,73 @@
 
     .ajo {
         position: relative;
-        right: 35%;
+        right: 5%;
+        bottom: 5%;
+        margin-top: 17%;
+        width: 85%;
+        height: auto;
+    }
+
+    .trigo {
+        position: relative;
+        bottom: 30%;
+        width: 85%;
+        height: auto;
+    }
+
+    .logo {
+        margin-top: 0%;
+        padding-left: 12%;
+        padding-right: 12%;
+    }
+
+    .tomato {
+        margin-top: 1%;
+        width: 20vw;
+        height: auto;
+    }
+
+    .wifi {
+        position: relative;
+        top: 5%;
+        width: 80%;
+        height: auto;
+        left: 33%;
+    }
+
+    .penguin {
+        position: relative;
+        bottom: 25%;
+        right: 20%;
+        width: 85%;
+        height: auto;
+    }
+
+
+
+}
+
+
+
+@media (min-width: 1401px) and (max-width: 2500px) {
+    .logoContainer {
+        color: rgba(255, 255, 255, 0.75);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        font-family: Oswald;
+        font-size: 230%;
+        font-style: normal;
+        font-weight: 200;
+        line-height: 75px;
+        color: white;
+        text-align: center;
+    }
+
+    .ajo {
+        position: relative;
+        right: 5%;
         bottom: 40%;
         margin-top: 17%;
         width: 85%;
@@ -125,7 +180,7 @@
     .penguin {
         position: relative;
         bottom: 25%;
-        right: 10%;
+        right: 20%;
         width: 85%;
         height: auto;
     }
@@ -134,7 +189,7 @@
 
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1400px) and (min-width: 769px){
     .trigo {
         position: relative;
         bottom: 80%;
@@ -160,16 +215,16 @@
         position: relative;
         width: 90%;
         height: auto;
-        right: 25%;
-        bottom: 45%;
+        right: 10%;
+        bottom: 20%;
     }
 
     .penguin {
         position: relative;
-        width: 90%;
+        width: 80%;
         height: auto;
-        right: 15%;
-        bottom: 35%;
+        right: 20%;
+        bottom: 25%;
     }
 
     .logo {
@@ -182,6 +237,7 @@
         position: relative;
         left: 19%;
         width: 90%;
+        margin-top: 5px;
         height: auto;
     }
 
@@ -193,9 +249,7 @@
 }
 
 
-
-
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-width: 576px) {
     .trigo {
         position: relative;
         bottom: 80%;
@@ -228,8 +282,8 @@
 
     .ajo {
         position: relative;
-        right: 40%;
-        bottom: 50%;
+        right: 10%;
+        bottom: 30%;
         width: 100%;
         height: auto;
     }
@@ -268,25 +322,28 @@
 
 
 
-@media (max-width: 576px) {
-
+@media (max-width: 577px){
+    .buttonInicio{
+        width: 40vh;
+    }
 
     .logo {
         margin-top: 0%;
         padding-left: 3%;
         padding-right: 3%;
     }
-
+    
     .tomato {
         margin-top: 2%;
+        width: 126%;
     }
 
     .penguintop {
         position: relative;
         right: 60%;
         bottom: 80%;
-        width: 325%;
         height: auto;
+        width: 300%;
     }
 
     .logoContainer {
@@ -313,53 +370,13 @@
     .ajo {
         position: relative;
         right: 50%;
-        bottom: 50%;
-        width: 150%;
+        bottom: 30%;
+        width: 160%;
         height: auto;
     }
 
 }
 
-
-@media (max-width: 343px) {
-    .penguintop {
-        position: relative;
-        right: 75%;
-        bottom: 45%;
-        width: 375%;
-        height: auto;
-    }
-
-    .trigo {
-        position: relative;
-        bottom: 110%;
-        width: 120%;
-        height: auto;
-    }
-
-    .logoContainer {
-        color: rgba(255, 255, 255, 0.75);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: Oswald;
-        font-size: 100%;
-        font-style: normal;
-        font-weight: 150;
-        line-height: 25px;
-        color: white;
-        text-align: center;
-    }
-
-    .ajo {
-        position: relative;
-        right: 65%;
-        bottom: 60%;
-        width: 180%;
-        height: auto;
-    }
-
-}
 
 .calendar {
     margin-right: 10px;
